[package]
name = "cadmium"
version = "1.0.0"
edition = "2021"
authors = ["nukeop <nukeop@gumblert.tech>"]
description = "Transforms the colors of a given image according to a given palette"
keywords = ["ricing", "colors"]
license = "AGPL-3.0"

[dependencies]
image = "0.24.3"
clap = { version = "3.2.16", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4.0"
